src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn.stderr
error[E0277]: the trait bound `&A: Into<&'static B>` is not satisfied
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^ the trait `Into<&'static B>` is not implemented for `&A`
LL |
LL |     (a, a)
   |     ------ return type was inferred to be `(&A, &A)` here
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) where &A: Into<&'static B> {
   |                                                                ++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
